# coding-challenges

./: .gitignore  README.md
Borlenghi-2f8ab5/: .gitignore  README.md  design.md  design_summary.md  setup.sh
Borlenghi-2f8ab5/.atl/: skill-registry.md
Borlenghi-2f8ab5/backend/: pyproject.toml  requirements.txt  seed_data.py
Borlenghi-2f8ab5/backend/app/: main.py
Borlenghi-2f8ab5/backend/app/api/v1/: router.py
Borlenghi-2f8ab5/backend/app/api/v1/endpoints/: auth.py  categories.py  notes.py
Borlenghi-2f8ab5/backend/app/core/: auth.py  config.py  database.py  security.py
Borlenghi-2f8ab5/backend/app/dao/: category_dao.py  note_dao.py
Borlenghi-2f8ab5/backend/app/models/: category.py  note.py
Borlenghi-2f8ab5/backend/app/schemas/: auth.py  category.py  note.py
Borlenghi-2f8ab5/backend/app/services/: category_service.py  note_service.py
Borlenghi-2f8ab5/frontend/: package.json  pnpm-lock.yaml
Borlenghi-2f8ab5/frontend/src/: App.jsx
Borlenghi-2f8ab5/frontend/src/components/: NoteCard.jsx  NoteForm.jsx
Borlenghi-2f8ab5/frontend/src/pages/: Login.jsx  NotesPage.jsx
Borlenghi-2f8ab5/frontend/src/routes/: ProtectedRoute.jsx
Borlenghi-2f8ab5/frontend/src/services/: api.js  noteService.js
Borlenghi-2f8ab5/frontend/src/store/: useStore.js
Borlenghi-2f8ab5/frontend/src/styles/: NoteCard.module.css  globals.css
Borlenghi-2f8ab5/sdd/react-notes/: tasks.md
codeSignal-challenge/: CHALLENGE.md
