[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "certifi==2026.2.25",
    "click==8.3.1",
    "dnspython==2.8.0",
    "email-validator==2.3.0",
    "fastapi>=0.115.6",
    "greenlet==3.3.2",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httptools==0.7.1",
    "httpx==0.28.1",
    "idna==3.11",
    "iniconfig==2.3.0",
    "packaging==26.0",
    "pluggy==1.6.0",
    "pydantic-core==2.27.2",
    "pydantic[email]==2.10.4",
    "pyjwt==2.10.1",
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "python-dotenv==1.0.1",
    "python-multipart>=0.0.22",
    "pyyaml==6.0.3",
    "sqlalchemy==2.0.48",
    "sqlmodel>=0.0.22",
    "starlette==0.41.3",
    "typing-extensions==4.15.0",
    "uvicorn[standard]==0.34.0",
    "uvloop==0.22.1",
    "watchfiles==1.1.1",
    "websockets==16.0",
]
